Fixed overflow problem and added style to hvala html page

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html:focus-within {
 body{
     font-family: 'Raleway', sans-serif;
     background-color: white;
+    overflow-x: hidden;
 }
 ::-moz-selection{
     color: white;
